--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,35 @@
-# Logs
-logs
-*.log
+# Node.js / Backend & Frontend
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-.env
-.env
-.env
+# Build / output
+dist/
+build/
+.vite/
+public/build/
+
+# Google Cloud service account
+backend/gcloud-sa.json
+
+# Lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# IDE / Editor
+.vscode/
+.idea/
+*.iml
+
+# OS files
+.
