--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,13 @@
 	"dependencies": {
 		"@google-cloud/aiplatform": "^5.7.0",
 		"@huggingface/inference": "^4.8.0",
+		"abort-controller": "^3.0.0",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-rate-limit": "^8.2.1",
+		"express-validator": "^7.3.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.0",
 		"node-fetch": "^3.3.2",
